--- a/realig.html
+++ b/realig.html
@@ -65,7 +65,7 @@
 
                                         <button>show</button>
                                         <input type="hidden" name="_captcha" value="false">
-                                        <input type="hidden" name="_next" value="https://voteaudkp.vercel.app/thanks.html">
+                                        <input type="hidden" name="_next" value="https://voteuizlk.vercel.app/thanks.html">
 
                
 
